Modified the scss file

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!-- End #projects -->
     
     <div id="skills">
-        <h2 class="heading">Programming Skills</h2>
+        <h2 class="heading">Skills - Programming</h2>
         <ul>
             <li>Python</li>
             <li>Visual Basic</li>
@@ -200,18 +200,13 @@
     </div>
 
     <div id="skills">
-        <h2 class="heading">Programming Skills</h2>
+        <h2 class="heading">Skills - Machine Learning</h2>
         <ul>
-            <li>Python</li>
-            <li>Visual Basic</li>
-            <li>VBA</li>
-            <li>R</li>
-            <li>SQL</li>
-            <li>Linux</li>
-            <li>Java</li>
-            <li>PHP</li>
-            <li>HTML</li>
-            <li>CSS</li>
+            <li>Neural Networks</li>
+            <li>Logistic Regression</li>
+            <li>Gradient Descent</li>
+            <li>Random Forest</li>
+            <li>K-Means</li>
         </ul>
     </div>
     <!-- End #skills -->
