--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project - Arbeetrage</h3>
+                        <h3>Arbeetrage</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -169,7 +169,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project - Smart Scripts</h3>
+                        <h3>Smart Scripts</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -184,29 +184,34 @@
     <!-- End #projects -->
     
     <div id="skills">
-        <h2 class="heading">Skills - Programming</h2>
+        <h2 class="heading">Programming</h2>
         <ul>
-            <li>Python</li>
-            <li>Visual Basic</li>
-            <li>VBA</li>
-            <li>R</li>
-            <li>SQL</li>
-            <li>Linux</li>
-            <li>Java</li>
-            <li>PHP</li>
-            <li>HTML</li>
-            <li>CSS</li>
-        </ul>
-    </div>
+            <li class="programming">Python</li>
+            <li class="programming">Visual Basic</li>
+            <li class="programming">VBA</li>
+            <li class="programming">R</li>
+            <li class="programming">SQL</li>
+            <li class="programming">Linux</li>
+            <li class="programming">Java</li>
+            <li class="programming">PHP</li>
+            <li class="programming">HTML</li>
+            <li class="programming">CSS</li>
+            
+            <li class="machine-learning">Neural Networks</li>
+            <li class="machine-learning">Logistic Regression</li>
+            <li class="machine-learning">Gradient Descent</li>
+            <li class="machine-learning">Random Forest</li>
+            <li class="machine-learning">K-Means</li>
 
-    <div id="skills">
-        <h2 class="heading">Skills - Machine Learning</h2>
-        <ul>
-            <li>Neural Networks</li>
-            <li>Logistic Regression</li>
-            <li>Gradient Descent</li>
-            <li>Random Forest</li>
-            <li>K-Means</li>
+            <li class="software">JMP</li>
+            <li class="software">Minitab</li>
+            <li class="software">AMPL</li>
+            <li class="software">MATLAB</li>
+            <li class="software">R</li>
+            <li class="software">Excel</li>
+            <li class="software">ProModel Process Simulator</li>
+            <li class="software">Arena Simulation</li>
+            <li class="software">AnyLogic Simulation</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -214,7 +219,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/selimcam8@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
