--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!-- End #projects -->
     
     <div id="skills">
-        <h2 class="heading">Programming</h2>
+        <h2 class="heading">Skills</h2>
         <ul>
             <li class="programming">Python</li>
             <li class="programming">Visual Basic</li>
@@ -207,12 +207,14 @@
             <li class="software">Minitab</li>
             <li class="software">AMPL</li>
             <li class="software">MATLAB</li>
-            <li class="software">R</li>
             <li class="software">Excel</li>
             <li class="software">ProModel Process Simulator</li>
             <li class="software">Arena Simulation</li>
             <li class="software">AnyLogic Simulation</li>
         </ul>
+        <!-- <span class="programming">Programming</span> -
+        <span class="machine-learning">Machine Learning</span> -
+        <span class="software">Software</span> -->
     </div>
     <!-- End #skills -->
 
